# farmit

./: .coveragerc  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: cicd.yml
src/farmit/: __init__.py
src/tests/: test_farmit.py
tests/: test_farmit.py
