[metadata]
name = farmit
author = David D. Riddle"
author_email = securitysupport@illinois.edu
description= Fully Automated Release Management tool
long_description = file: README.rst
long_description_content_type= text/markdown
url= https://github.com/techservicesillinois/farmit
classifiers=
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
package_dir=
    = src
install_requires =
  GitPython
  pydriller
  setuptools_scm
include_package_data=True

[options.entry_points]
console_scripts =
    farmit = farmit:_main

[options.packages.find]
where = src
